--- a/src/style.css
+++ b/src/style.css
@@ -91,8 +91,8 @@ button:focus {
 
 .navbar-toggler {
   position: relative !important;
-  background-color: transparent !important;
-  border-color: transparent !important;
+  background-color: rgb(10, 4, 22);
+  background-color: rgb(10, 4, 22);
 }
 
 .navbar-toggler span {
@@ -128,8 +128,8 @@ button:focus {
 
 .navbar-toggler:not(.collapsed) span:nth-child(2) {
   height: 12px !important;
-  visibility: hidden !important;
-  background-color: transparent !important;
+  /* visibility: hidden !important; */
+  background-color: rgb(10, 4, 22);
 }
 
 .navbar-toggler:not(.collapsed) span:nth-child(3) {
@@ -474,12 +474,14 @@ button:focus {
 
 
 .project-card-view {
-  box-shadow: 0 3px 3px 5px rgba(86, 89, 121, 0.65) !important;
-  color: white !important;
-  background-color: transparent !important;
+  box-shadow: 0 3px 3px 5px rgba(200, 201, 221, 0.65) !important;
+  color:gray !important;
+  background-color: rgb(10, 4, 22);
   opacity: 0.9 !important;
   transition: all 0.5s ease 0s !important;
   height: 100% !important;
+  padding: 25px;
+  border-radius: 30px;
 }
 .project-card-view:hover {
   transform: scale(1.02) !important;
@@ -496,7 +498,7 @@ button:focus {
 }
 
 .blog-card-view {
-  background-color: transparent !important;
+  background-color: rgb(10, 4, 22);
   box-shadow: 0 3px 3px 2px rgba(145, 77, 161, 0.459) !important;
   color: white !important;
   transition: all 0.5s ease 0s !important;
@@ -569,16 +571,31 @@ button:focus {
   margin: 15px !important;
   padding: 10px !important;
   opacity: 0.93 !important;
-  border: 1.7px solid rgba(53, 50, 54, 0.637) !important;
+  border: 1.7px solid rgba(66, 141, 240, 0.637) !important;
   vertical-align: middle !important;
   text-align: center !important;
-  border-radius: 5px !important;
+  border-radius: 25px !important;
   display: table !important;
-  box-shadow: 4px 5px 4px 3px rgba(82, 80, 83, 0.137) !important;
+  box-shadow: 4px 5px 4px 3px rgba(166, 173, 175, 0.137) !important;
   overflow: hidden !important;
   transition: all 0.4s ease 0s !important;
+  background-color: #2564c2;
 }
-
+.tech-icons1 {
+  font-size: 4.5em !important;
+  
+  padding: 0px !important;
+  opacity: 0.93 !important;
+  border: 1.7px solid rgba(66, 141, 240, 0.637) !important;
+  vertical-align: middle !important;
+  text-align: center !important;
+  border-radius: 50% !important;
+  display: table !important;
+  box-shadow: 4px 5px 4px 3px rgba(166, 173, 175, 0.137) !important;
+  overflow: hidden !important;
+  transition: all 0.4s ease 0s !important;
+  background-color: #2564c2;
+}
 @media (max-width: 767px) {
   .tech-icons {
     margin: 10px !important;
@@ -598,7 +615,7 @@ button:focus {
 .quote-card-view {
   border: none !important;
   color: white !important;
-  background-color: transparent !important;
+  background-color: rgb(10, 4, 22);
 }
 
 .about-activity {
