--- a/src/components/Contact/Contacts.css
+++ b/src/components/Contact/Contacts.css
@@ -13,6 +13,7 @@
   
  
   .contact-container {
-    background-color: #a7b5aa;
+    background-color:white;
     padding: 40px;
+    color: black;
   }
